// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowedAnimesUpdates renders default 1`] = `
.emotion-0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-2 {
  overflow-x: hidden;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0!important;
  background-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-4:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-4:hover {
  opacity: 0!important;
  background-image: linear-gradient(
        to left,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.emotion-7 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-7 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-7:hover {
  z-index: 10;
}

.emotion-7:hover .ManageButtons {
  opacity: 1;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  background-color: #292d33;
  padding: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 0.5) 20%,
      rgba(0, 0, 0, 0) 90%
    );
  -webkit-backface-visibility: initial;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.emotion-12::-moz-focus-inner {
  border-style: none;
}

.emotion-12.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-12 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-14 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-15 {
  font-weight: 400;
  color: white;
  font-size: 1rem;
  line-height: 1;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.emotion-16 {
  font-weight: 300;
  color: rgba(255, 255, 255, 0.8);
  font-size: 0.9rem;
}

.emotion-38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0.7!important;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-38::-moz-focus-inner {
  border-style: none;
}

.emotion-38.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-38 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-38:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-38:hover {
    background-color: transparent;
  }
}

.emotion-38.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-38:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-38:hover {
  opacity: 1!important;
  background-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

<body>
  <div>
    <div
      class="emotion-0"
      size="32"
    />
    <h2
      class="emotion-1"
      style="margin-left: 72px; margin-bottom: 24px;"
    >
      Animes que sigues
    </h2>
    <div
      class="emotion-2"
      style="width: 100vw;"
    >
      <div
        class="emotion-3"
        style="left: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-4"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-6"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 0"
                class="emotion-9"
                src="Here goes the anime image url 0"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 1"
                class="emotion-9"
                src="Here goes the anime image url 1"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 1"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 1
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 2"
                class="emotion-9"
                src="Here goes the anime image url 2"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-3"
        style="right: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-38"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42"
            />
          </svg>
          <span
            class="MuiTouchRipple-root emotion-14"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when all animes are loading 1`] = `
.emotion-0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-2 {
  overflow-x: hidden;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0!important;
  background-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-4:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-4:hover {
  opacity: 0!important;
  background-image: linear-gradient(
        to left,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.emotion-7 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-7 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-7:hover {
  z-index: 10;
}

.emotion-7:hover .ManageButtons {
  opacity: 1;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0.7!important;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-11::-moz-focus-inner {
  border-style: none;
}

.emotion-11.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-11 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-11:hover {
    background-color: transparent;
  }
}

.emotion-11.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-11:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-11:hover {
  opacity: 1!important;
  background-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

.emotion-13 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

<body>
  <div>
    <div
      class="emotion-0"
      size="32"
    />
    <h2
      class="emotion-1"
      style="margin-left: 72px; margin-bottom: 24px;"
    >
      Animes que sigues
    </h2>
    <div
      class="emotion-2"
      style="width: 100vw;"
    >
      <div
        class="emotion-3"
        style="left: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-4"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-6"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            style="cursor: default; opacity: 1;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            style="cursor: default; opacity: 0.8;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            style="cursor: default; opacity: 0.6;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-3"
        style="right: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-11"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42"
            />
          </svg>
          <span
            class="MuiTouchRipple-root emotion-13"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when loading 1`] = `
.emotion-0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-2 {
  overflow-x: hidden;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0!important;
  background-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-4:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-4:hover {
  opacity: 0!important;
  background-image: linear-gradient(
        to left,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.emotion-7 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-7 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-7:hover {
  z-index: 10;
}

.emotion-7:hover .ManageButtons {
  opacity: 1;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  background-color: #292d33;
  padding: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 0.5) 20%,
      rgba(0, 0, 0, 0) 90%
    );
  -webkit-backface-visibility: initial;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.emotion-12::-moz-focus-inner {
  border-style: none;
}

.emotion-12.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-12 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-14 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-15 {
  font-weight: 400;
  color: white;
  font-size: 1rem;
  line-height: 1;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.emotion-16 {
  font-weight: 300;
  color: rgba(255, 255, 255, 0.8);
  font-size: 0.9rem;
}

.emotion-38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0.7!important;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-38::-moz-focus-inner {
  border-style: none;
}

.emotion-38.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-38 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-38:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-38:hover {
    background-color: transparent;
  }
}

.emotion-38.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-38:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-38:hover {
  opacity: 1!important;
  background-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

<body>
  <div>
    <div
      class="emotion-0"
      size="32"
    />
    <h2
      class="emotion-1"
      style="margin-left: 72px; margin-bottom: 24px;"
    >
      Animes que sigues
    </h2>
    <div
      class="emotion-2"
      style="width: 100vw;"
    >
      <div
        class="emotion-3"
        style="left: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-4"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-6"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 0"
                class="emotion-9"
                src="Here goes the anime image url 0"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 1"
                class="emotion-9"
                src="Here goes the anime image url 1"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 1"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 1
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 2"
                class="emotion-9"
                src="Here goes the anime image url 2"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-3"
        style="right: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-38"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42"
            />
          </svg>
          <span
            class="MuiTouchRipple-root emotion-14"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when some animes are loading 1`] = `
.emotion-0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-weight: 500;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 24px;
}

.emotion-2 {
  overflow-x: hidden;
  position: relative;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0!important;
  background-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: transparent;
  }
}

.emotion-4.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-4:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-4:hover {
  opacity: 0!important;
  background-image: linear-gradient(
        to left,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.emotion-7 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width: 7396px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 22 * 16px - 2 *
                72px
            ) / 23
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 7080px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 21 * 16px - 2 *
                72px
            ) / 22
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6764px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 20 * 16px - 2 *
                72px
            ) / 21
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6448px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 19 * 16px - 2 *
                72px
            ) / 20
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 6132px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 18 * 16px - 2 *
                72px
            ) / 19
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5816px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 17 * 16px - 2 *
                72px
            ) / 18
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5500px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 16 * 16px - 2 *
                72px
            ) / 17
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 5184px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 15 * 16px - 2 *
                72px
            ) / 16
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4868px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 14 * 16px - 2 *
                72px
            ) / 15
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4552px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 13 * 16px - 2 *
                72px
            ) / 14
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 4236px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 12 * 16px - 2 *
                72px
            ) / 13
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3920px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 11 * 16px - 2 *
                72px
            ) / 12
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3604px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 10 * 16px - 2 *
                72px
            ) / 11
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 3288px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 9 * 16px - 2 *
                72px
            ) / 10
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2972px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 8 * 16px - 2 *
                72px
            ) / 9
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2656px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 7 * 16px - 2 *
                72px
            ) / 8
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2340px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 6 * 16px - 2 *
                72px
            ) / 7
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 2024px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 5 * 16px - 2 *
                72px
            ) / 6
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1708px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 4 * 16px - 2 *
                72px
            ) / 5
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1392px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 3 * 16px - 2 *
                72px
            ) / 4
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 1076px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 2 * 16px - 2 *
                72px
            ) / 3
        );
    --height: calc(var(--width) * 0.94);
  }
}

@media (max-width: 760px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 1 * 16px - 2 *
                72px
            ) / 2
        );
    --height: calc(var(--width) * 0.94);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width: 444px) {
  .emotion-7 {
    --width: calc(
          (
              100vw - 0 * 16px - 2 *
                72px
            ) / 1
        );
    --height: calc(var(--width) * 0.94);
  }
}

.emotion-7 .ManageButtons {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.emotion-7:hover {
  z-index: 10;
}

.emotion-7:hover .ManageButtons {
  opacity: 1;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-9 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  background-color: #292d33;
  padding: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-11 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 0.5) 20%,
      rgba(0, 0, 0, 0) 90%
    );
  -webkit-backface-visibility: initial;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.emotion-12::-moz-focus-inner {
  border-style: none;
}

.emotion-12.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-12 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-14 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-15 {
  font-weight: 400;
  color: white;
  font-size: 1rem;
  line-height: 1;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.emotion-16 {
  font-weight: 300;
  color: rgba(255, 255, 255, 0.8);
  font-size: 0.9rem;
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
  font-family: OpenSans,Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0!important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
  height: 100%;
  border-radius: 0;
  background-color: transparent!important;
  opacity: 0.7!important;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.3) 50%,
      rgba(0, 0, 0, 0.4)
    );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.emotion-29::-moz-focus-inner {
  border-style: none;
}

.emotion-29.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-29 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-29:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41, 45, 51, 0.08);
}

@media (hover: none) {
  .emotion-29:hover {
    background-color: transparent;
  }
}

.emotion-29.Mui-disabled {
  color: rgba(255, 255, 255, 0.3);
}

.emotion-29:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.emotion-29:hover {
  opacity: 1!important;
  background-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.4) 50%,
        rgba(0, 0, 0, 0.8)
      );
}

<body>
  <div>
    <div
      class="emotion-0"
      size="32"
    />
    <h2
      class="emotion-1"
      style="margin-left: 72px; margin-bottom: 24px;"
    >
      Animes que sigues
    </h2>
    <div
      class="emotion-2"
      style="width: 100vw;"
    >
      <div
        class="emotion-3"
        style="left: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-4"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-6"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 0"
                class="emotion-9"
                src="Here goes the anime image url 0"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            style="cursor: default; opacity: 0.8;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="emotion-7"
            data-testid="anime-entry-background"
          >
            <div
              class="emotion-8"
            >
              <img
                alt="Here goes the anime name 2"
                class="emotion-9"
                src="Here goes the anime image url 2"
              />
            </div>
            <div
              class="emotion-10 AnimeInfo"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="emotion-11 ManageButtons"
              >
                <button
                  aria-label="Seguir"
                  class="MuiButtonBase-root  emotion-12"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28M12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root emotion-14"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class=" emotion-15"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="emotion-16"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-3"
        style="right: 0px; width: 72px;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-29"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-5"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42"
            />
          </svg>
          <span
            class="MuiTouchRipple-root emotion-14"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
